# uni-labs

sem1/: .gitignore
sem1/lab1/: .gitignore  CMakeLists.txt  lab1declarations.h  lab1definitions.cpp  main.cpp
sem1/lab2/: CMakeLists.txt  README.md  dataset
sem1/lab2/cpp/: chest.cpp  gameManager.cpp  items.cpp  main.cpp  map.cpp  monster.cpp  player.cpp  progen.cpp  stateBattle.cpp  text.cpp  timer.cpp
sem1/lab2/h/: chest.h  gameManager.h  items.h  map.h  monster.h  player.h  progen.h  stateBattle.h  text.h  timer.h
sem1/lab2/sprites/: 1  2  3  4  chest
sem1/lab3/: CMakeLists.txt
sem1/lab3/h/: automaton.h  tests.h
sem1/lab3/src/: main.cpp
